# Kompute

./: CMakeLists.txt  README.md
shaders/: ps.comp
src/: dispatcher.hpp  file_utils.hpp  glm_utils.hpp  main.cpp  meshlets.hpp
